// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CurricUnitCard changes color when highlighed 1`] = `
<body>
  <div>
    <div
      class="sc-bdvwhi sc-bXTeWK elSKXy CYQjY"
    >
      <a
        class="sc-79137fc-0 evxJPM"
        data-testid="unit-info-link"
        href="/"
      >
        <div
          class="sc-bdvwhi sc-gsDMPd gHhcuN cIPGhJ"
          data-testid="unit-card"
        >
          <div
            class="sc-bdvwhi sc-gsDMPd hPWTKU kirjqU"
          >
            <div
              class="sc-bkkgYE sc-6dbd7f46-0 Xaaow iNOHaR"
            >
              <span
                aria-hidden="true"
              >
                1
              </span>
            </div>
            <span
              class="sc-dkPwfY cSKbCa"
            >
              Something nice
            </span>
            <div
              class="sc-bdvwhi hFUkks"
              data-testid="options-tag"
            >
              <span
                class="sc-dkPwfY kSuBdj"
                color="lavender"
              >
                2 unit options
              </span>
            </div>
          </div>
          <div
            class="sc-bdvwhi sc-gsDMPd dkETdW dHhGIq"
          >
            <div
              class="sc-bdvwhi sc-gsDMPd hPWTKU lawjtZ"
            >
              <div
                class="sc-bdvwhi sc-dlVwtM flamfx kbIIFQ"
              >
                Unit info
              </div>
              <span
                class="sc-bdvwhi cERAFe"
              >
                <img
                  alt=""
                  class="sc-jRQBiJ fZPumv"
                  data-nimg="fill"
                  decoding="async"
                  loading="lazy"
                  src="https://next_public_oak_assets_host/NEXT_PUBLIC_OAK_ASSETS_PATH/v1707752509/icons/vk9xxxhnsltsickom6q9.svg"
                  style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
                />
              </span>
            </div>
          </div>
        </div>
      </a>
    </div>
  </div>
</body>
`;

exports[`CurricUnitCard highlighted state 1`] = `
<body>
  <div>
    <div
      class="sc-bdvwhi sc-bXTeWK elSKXy CYQjY"
    >
      <a
        class="sc-79137fc-0 gWZnYK"
        data-testid="unit-info-link"
        href="/"
      >
        <div
          class="sc-bdvwhi sc-gsDMPd cyLTDJ cIPGhJ"
          data-testid="highlighted-unit-card"
        >
          <div
            class="sc-bdvwhi sc-gsDMPd hPWTKU kirjqU"
          >
            <div
              class="sc-bkkgYE sc-6dbd7f46-0 Xaaow iNOHaR"
            >
              <span
                aria-hidden="true"
              >
                1
              </span>
            </div>
            <span
              class="sc-dkPwfY cSKbCa"
            >
              Something nice
            </span>
            <div
              class="sc-bdvwhi hFUkks"
              data-testid="options-tag"
            >
              <span
                class="sc-dkPwfY kSuBdj"
                color="lavender"
              >
                2 unit options
              </span>
            </div>
          </div>
          <div
            class="sc-bdvwhi sc-gsDMPd dkETdW dHhGIq"
          >
            <div
              class="sc-bdvwhi sc-gsDMPd hPWTKU lawjtZ"
            >
              <div
                class="sc-bdvwhi sc-dlVwtM flamfx kbIIFQ"
              >
                Unit info
              </div>
              <span
                class="sc-bdvwhi cERAFe"
              >
                <img
                  alt=""
                  class="sc-jRQBiJ buswnv"
                  data-nimg="fill"
                  decoding="async"
                  loading="lazy"
                  src="https://next_public_oak_assets_host/NEXT_PUBLIC_OAK_ASSETS_PATH/v1707752509/icons/vk9xxxhnsltsickom6q9.svg"
                  style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
                />
              </span>
            </div>
          </div>
          <div
            style="border: 0px; clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
          >
             (highlighted)
          </div>
        </div>
      </a>
    </div>
  </div>
</body>
`;

exports[`CurricUnitCard index is correct 1`] = `
<body>
  <div>
    <div
      class="sc-bdvwhi sc-bXTeWK elSKXy CYQjY"
    >
      <a
        class="sc-79137fc-0 evxJPM"
        data-testid="unit-info-link"
        href="/"
      >
        <div
          class="sc-bdvwhi sc-gsDMPd gHhcuN cIPGhJ"
          data-testid="unit-card"
        >
          <div
            class="sc-bdvwhi sc-gsDMPd hPWTKU kirjqU"
          >
            <div
              class="sc-bkkgYE sc-6dbd7f46-0 Xaaow iNOHaR"
            >
              <span
                aria-hidden="true"
              >
                1
              </span>
            </div>
            <span
              class="sc-dkPwfY cSKbCa"
            >
              Something nice
            </span>
            <div
              class="sc-bdvwhi hFUkks"
              data-testid="options-tag"
            >
              <span
                class="sc-dkPwfY kSuBdj"
                color="lavender"
              >
                2 unit options
              </span>
            </div>
          </div>
          <div
            class="sc-bdvwhi sc-gsDMPd dkETdW dHhGIq"
          >
            <div
              class="sc-bdvwhi sc-gsDMPd hPWTKU lawjtZ"
            >
              <div
                class="sc-bdvwhi sc-dlVwtM flamfx kbIIFQ"
              >
                Unit info
              </div>
              <span
                class="sc-bdvwhi cERAFe"
              >
                <img
                  alt=""
                  class="sc-jRQBiJ fZPumv"
                  data-nimg="fill"
                  decoding="async"
                  loading="lazy"
                  src="https://next_public_oak_assets_host/NEXT_PUBLIC_OAK_ASSETS_PATH/v1707752509/icons/vk9xxxhnsltsickom6q9.svg"
                  style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
                />
              </span>
            </div>
          </div>
        </div>
      </a>
    </div>
  </div>
</body>
`;

exports[`CurricUnitCard render 1`] = `
<body>
  <div>
    <div
      class="sc-bdvwhi sc-bXTeWK elSKXy CYQjY"
    >
      <a
        class="sc-79137fc-0 evxJPM"
        data-testid="unit-info-link"
        href="/"
      >
        <div
          class="sc-bdvwhi sc-gsDMPd gHhcuN cIPGhJ"
          data-testid="unit-card"
        >
          <div
            class="sc-bdvwhi sc-gsDMPd hPWTKU kirjqU"
          >
            <div
              class="sc-bkkgYE sc-6dbd7f46-0 Xaaow iNOHaR"
            >
              <span
                aria-hidden="true"
              >
                1
              </span>
            </div>
            <span
              class="sc-dkPwfY cSKbCa"
            >
              Something nice
            </span>
            <div
              class="sc-bdvwhi hFUkks"
              data-testid="options-tag"
            >
              <span
                class="sc-dkPwfY kSuBdj"
                color="lavender"
              >
                2 unit options
              </span>
            </div>
          </div>
          <div
            class="sc-bdvwhi sc-gsDMPd dkETdW dHhGIq"
          >
            <div
              class="sc-bdvwhi sc-gsDMPd hPWTKU lawjtZ"
            >
              <div
                class="sc-bdvwhi sc-dlVwtM flamfx kbIIFQ"
              >
                Unit info
              </div>
              <span
                class="sc-bdvwhi cERAFe"
              >
                <img
                  alt=""
                  class="sc-jRQBiJ fZPumv"
                  data-nimg="fill"
                  decoding="async"
                  loading="lazy"
                  src="https://next_public_oak_assets_host/NEXT_PUBLIC_OAK_ASSETS_PATH/v1707752509/icons/vk9xxxhnsltsickom6q9.svg"
                  style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
                />
              </span>
            </div>
          </div>
        </div>
      </a>
    </div>
  </div>
</body>
`;
